cabal-version:       >=1.10

name:                jassdoc
version:             1.0.0
author:              lep
build-type:          Simple
extra-source-files:  Readme.md

executable mkdocs
  main-is:             mkdocs.hs
  other-modules: Jass.Types, Jass.Parser, Jass.Ast, Data.Composeable
  build-depends: base, bytestring, megaparsec, mtl, parser-combinators, optparse-applicative
  default-language:    Haskell2010
