cabal-version:       >=1.10

name:                jassdoc
version:             1.0.0
author:              lep
build-type:          Simple
extra-source-files:  Readme.md

executable mkdocs
  main-is:             mkdocs.hs
  other-modules: Jass.Types, Jass.Parser, Jass.Ast, Data.Composeable, Annotation
  build-depends: base, bytestring, megaparsec, mtl, parser-combinators,
                 optparse-applicative, aeson, text
  default-language:    Haskell2010

executable jass2json
  main-is: jass2json.hs
  other-modules: Jass.Types, Jass.Parser, Jass.Ast, Data.Composeable, Annotation
  build-depends: base, bytestring, megaparsec, mtl, parser-combinators,
                  optparse-applicative, aeson, text
  default-language: Haskell2010
